# polyskel-cpp-port

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  event.cpp  event.h  lav.cpp  lav.h  lavertex.cpp  lavertex.h  polyskel.cpp  polyskel.h  slav.cpp  slav.h  util.cpp  util.h  vec.h
test/: compare.py  out_cpp.txt  out_python.txt  render_comparison.py  test.py  util.py
test/reference/: demo.py  polyskel.py
